--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
   "author": "Todd Kennedy <todd@selfassembled.org>",
   "license": "Apache-2.0",
   "dependencies": {
+    "chalk": "^2.3.0",
+    "debug": "^3.1.0",
     "find-root": "^1.1.0",
     "minimist": "^1.2.0",
+    "run-series": "^1.1.4",
+    "run-waterfall": "^1.1.3",
     "sanitize-filename": "^1.6.1"
   }
 }
