--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   "dependencies": {
     "chalk": "^2.3.0",
     "debug": "^3.1.0",
+    "fast-json-parse": "^1.0.3",
+    "fast-safe-stringify": "^1.2.1",
     "find-root": "^1.1.0",
     "minimist": "^1.2.0",
+    "run-parallel": "^1.1.6",
     "run-series": "^1.1.4",
     "run-waterfall": "^1.1.3",
     "sanitize-filename": "^1.6.1"
