--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "pkgswap.js",
   "bin": "cli.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "standard && npm run dep && tap test/*.spec.js",
+    "coverage": "standard && npm run dep && tap --cov --coverage-report=lcov --100 test/*.spec.js",
+    "dep": "dependency-check . && dependency-check . --unused --no-dev"
   },
   "keywords": [
     "npm",
@@ -29,5 +31,10 @@
     "run-series": "^1.1.4",
     "run-waterfall": "^1.1.3",
     "sanitize-filename": "^1.6.1"
+  },
+  "devDependencies": {
+    "dependency-check": "^2.9.1",
+    "standard": "^10.0.3",
+    "tap": "^10.7.3"
   }
 }
