--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
   },
   "devDependencies": {
     "dependency-check": "^2.9.1",
+    "ncp": "^2.0.0",
+    "rimraf": "^2.6.2",
     "standard": "^10.0.3",
     "tap": "^10.7.3"
   }
